@@ -11,7 +11,7 @@ https_port = @HTTPS_PORT@
 gen_dir = @GEN_DIR@
 
 [acme]
-url_default=https://acme-v01.api.letsencrypt.org/directory
+url_default=@ACME_DEF_URL@
 url = http://localhost:4000/directory
 tos = http://boulder:4000/terms/v1
 tos2 = http://boulder:4000/terms/v2
