@@ -288,26 +288,6 @@ class TestConf:
         assert TestEnv.apache_restart() == 0
         assert TestEnv.a2md(["list"])['jout']['output'][0]['drive-mode'] == 1
 
-    @pytest.mark.skip(reason="ACME URL not updated into store form vhost context")
-    def test_310_305(self):
-        # test case: change acme url on only one mds
-        # setup: prepare two mds in store with default ACME url
-        name = "example.org"
-        TestEnv.install_test_conf("two_mds_vhosts");
-        assert TestEnv.apache_restart() == 0
-        name1 = "example.org"
-        name2 = "example2.org"
-        self._check_md_names(name1, [name1, "www." + name1, "mail." + name1], 1, 2)
-        self._check_md_names(name2, [name2, "www." + name2, "mail." + name2], 1, 2)
-        self._check_md_ca(name1, TestEnv.ACME_URL_DEFAULT, "ACME", None)
-        self._check_md_ca(name2, TestEnv.ACME_URL_DEFAULT, "ACME", None)
-        # setup: change ACME url on only one md
-        TestEnv.install_test_conf("two_mds_vhosts_ca");
-        assert TestEnv.apache_restart() == 0
-        # check: two 
-        self._check_md_ca(name1, TestEnv.ACME_URL_DEFAULT, "ACME", None)
-        self._check_md_ca(name2, "http://somewhere.com:6666/directory", "ACME", None)
-
     # --------- status reset on critical store changes ---------
 
     def test_310_400(self):
